Fix a few ShareTargetFiles bugs in the WebAppManifest Parser.

Bugs fixed:
* don't crash if entries in 'accept' sequence are not strings
* allow 'accept' to be a single string
* allow 'files' to be a single ShareTargetFile

Bug: 911690, 912548
Change-Id: If930941dafaf61dbeb5b80d53a7684aa88f401b7
Reviewed-on: https://chromium-review.googlesource.com/c/1361291
Commit-Queue: Glenn Hartmann <hartmanng@chromium.org>
Reviewed-by: Mounir Lamouri <mlamouri@chromium.org>
Reviewed-by: Eric Willigers <ericwilligers@chromium.org>
Reviewed-by: Matt Giuca <mgiuca@chromium.org>
Cr-Commit-Position: refs/heads/master@{#620359}
Former-commit-id: 685a74c3ce8286ec5972b53df40300a7322307e3